feat: add gas supply
