# src/routes/index.ts
@@ -1,4 +1,5 @@
 import gasStationRouter from "@/modules/gas-station/gas-station.routes";
+import gasSupplyRouter from "@/modules/gas-supply/gas-supply.routes";
 import healthRouter from "@/modules/health/health.routes";
 import express from "express";
 
@@ -6,5 +7,6 @@ const router = express.Router();
 
 router.use(healthRouter);
 router.use(gasStationRouter);
+router.use(gasSupplyRouter);
 
 export { router };
